# meng

./: .gitignore  push-test.txt
c-cpp-net-prog/tcp-test/: tcpclient  tcpclient.c  tcpserver  tcpserver.c
oop-practice/: Person.h  a.out  main.cpp
oop-practice/fraction-class/: Fraction.h
oop-practice/person-class/: Person.cpp
opengl/: CMakeLists.txt
opengl/dependencies/glad/: glad.h
opengl/src/: glad.c  main.cpp
password-generator/: index.js  index.ts
ray-tracing/: main
ray-tracing/first-image/: a.out  main.cc
ray-tracing/main.dSYM/Contents/Resources/DWARF/: main
ray-tracing/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
ray-tracing/vec3-class/: a.out  colour.h  main.cc  vec3.h
tsc-examples/pexels/: index.ts  package.json  tsconfig.json
tsc-examples/todo/src/: index.ts  todoCollection.ts  todoItem.ts
